# biclique-approximation

./: .gitignore  README.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dense50.txt  out.txt  out.txt]  out.txtmake  out.txty  out2.txt  out3.txt  outbook.txt  outbookpm.txt  outcp.txt  outcp2.txt  outuc.txt
src/VLDB17/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hopstotchHash.hpp  listLinearHeap.hpp  run
src/biClique/: #include "BCT.cpp  .clang-format  BCListPlusPlus.cpp  BCListPlusPlus.h  BCT.cpp  BCT.h  BCTV2.cpp  BCTV2.h  BK.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  acc-copy.cpp  accuracy.cpp  accuracy.h  bcAndPath.cpp  bcAndPath.h  bcAndPathV5.cpp  bct  bctree  cmake_install.cmake  colorPath copy.cpp  colorPath.cpp  colorPath.h  colorPathAV5.cpp  rawEdgePivot.cpp  rawEdgePivot.h  shadow.cpp  shadow.h  test.cpp
src/biGraph/: Makefile  biGraph.hpp  cmake_install.cmake
src/data/: bct1.txt  data.py  degtest.txt  dense copy.txt  dense.txt  dense10.txt  dense50.txt  out.txt
src/densestSubgraph/: CMakeLists.txt  Makefile  cmake_install.cmake  exactFlowAlgorithm.cpp  exactFlowAlgorithm.h  pqBicliqeDensest.h  rawEdgePivot.cpp  rawEdgePivot.h
src/runner/: densestSubgraph.cpp  exactDensestSubgraph.cpp  run.cpp
src/tools/: CMakeLists.txt  Makefile  cmake_install.cmake  cuckooHash.hpp  fastIO.hpp  getArgs.hpp  hopstotchHash.hpp  linearSet.hpp  robin_hood.h  test
